--- a/service/pom.xml
+++ b/service/pom.xml
@@ -28,6 +28,7 @@
         <rest-assured.version>2.9.0</rest-assured.version>
         <tds-common.version>0.0.1-SNAPSHOT</tds-common.version>
         <tds-client.version>0.0.1-SNAPSHOT</tds-client.version>
+        <h2-database.version>1.4.191</h2-database.version>
     </properties>
 
     <dependencies>
@@ -81,11 +82,11 @@
             <version>2.3.9</version>
         </dependency>
 
-        <!--<dependency>-->
-            <!--<groupId>org.flywaydb</groupId>-->
-            <!--<artifactId>flyway-core</artifactId>-->
-            <!--<version>4.0.3</version>-->
-        <!--</dependency>-->
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+            <version>4.0.3</version>
+        </dependency>
 
         <!-- Test -->
         <dependency>
@@ -122,6 +123,55 @@
         </dependency>
     </dependencies>
 
+    <profiles>
+        <profile>
+            <id>db-migration</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+                <property>
+                    <name>db-migrate</name>
+                    <value>true</value>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.flywaydb</groupId>
+                        <artifactId>flyway-maven-plugin</artifactId>
+                        <version>4.0.3</version>
+                        <executions>
+                            <execution>
+                                <id>flyway_migrations</id>
+                                <phase>test</phase>
+                                <goals>
+                                    <goal>migrate</goal>
+                                </goals>
+                                <configuration>
+                                    <!--<locations>-->
+                                    <!--<location>filesystem:src/test/resources/db/migration</location>-->
+                                    <!--</locations>-->
+                                    <!-- no point in running migrations if integration tests are skipped -->
+                                    <url>jdbc:mysql://127.0.0.1:3306/exam</url>
+                                    <user>root</user>
+                                    <password>hambone</password>
+                                </configuration>
+                            </execution>
+                        </executions>
+
+                        <dependencies>
+                            <dependency>
+                                <groupId>mysql</groupId>
+                                <artifactId>mysql-connector-java</artifactId>
+                                <version>5.1.39</version>
+                            </dependency>
+                        </dependencies>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
@@ -156,6 +206,40 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>4.0.3</version>
+                <executions>
+                    <execution>
+                        <id>flyway_test_migrations</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>migrate</goal>
+                        </goals>
+                        <configuration>
+                            <!--<locations>-->
+                            <!--<location>filesystem:src/test/resources/db/migration</location>-->
+                            <!--</locations>-->
+                            <!-- no point in running migrations if integration tests are skipped -->
+                            <skip>${integration-tests.skip}</skip>
+                            <url>jdbc:h2:mem:exam;MODE=MySQL;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS
+                                "public";
+                            </url>
+                            <user>sa</user>
+                        </configuration>
+                    </execution>
+                </executions>
+
+                <dependencies>
+                    <dependency>
+                        <groupId>com.h2database</groupId>
+                        <artifactId>h2</artifactId>
+                        <version>${h2-database.version}</version>
+                    </dependency>
+                </dependencies>
             </plugin>
         </plugins>
     </build>
