Added OpenExam request POJO and validation

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -22,6 +22,14 @@
     </properties>
 
     <dependencies>
+        <!-- Validation -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.2.4.Final</version>
+        </dependency>
+
+        <!-- Testing -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
