--- a/service/pom.xml
+++ b/service/pom.xml
@@ -27,7 +27,9 @@
         <mockito.version>1.10.19</mockito.version>
         <rest-assured.version>2.9.0</rest-assured.version>
         <tds-common.version>0.0.1-SNAPSHOT</tds-common.version>
-        <tds-client.version>0.0.1-SNAPSHOT</tds-client.version>
+        <tds-exam-client.version>0.0.1-SNAPSHOT</tds-exam-client.version>
+        <tds-session.version>0.0.1-SNAPSHOT</tds-session.version>
+        <tds-student-service-client.version>0.0.1-SNAPSHOT</tds-student-service-client.version>
         <h2-database.version>1.4.191</h2-database.version>
         <mysql.version>5.1.39</mysql.version>
     </properties>
@@ -37,12 +39,22 @@
         <dependency>
             <groupId>org.opentestsystem.exam</groupId>
             <artifactId>tds-exam-client</artifactId>
-            <version>${tds-client.version}</version>
+            <version>${tds-exam-client.version}</version>
         </dependency>
         <dependency>
             <groupId>org.opentestsystem.common</groupId>
             <artifactId>tds-common</artifactId>
             <version>${tds-common.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opentestsystem.session</groupId>
+            <artifactId>tds-session-client</artifactId>
+            <version>${tds-session.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opentestsystem.student</groupId>
+            <artifactId>tds-student-service-client</artifactId>
+            <version>${tds-student-service-client.version}</version>
         </dependency>
 
         <!-- Spring -->
@@ -67,6 +79,17 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
+
+        <!-- Validation -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
         </dependency>
 
         <!-- Database/data access dependencies -->
