--- a/service/pom.xml
+++ b/service/pom.xml
@@ -112,6 +112,13 @@
             <version>4.0.3</version>
         </dependency>
 
+        <!-- External -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
+
         <!-- Test -->
         <dependency>
             <groupId>com.h2database</groupId>
