--- a/service/pom.xml
+++ b/service/pom.xml
@@ -12,27 +12,10 @@
     <description>The microservice for exams</description>
 
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.4.0.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>org.opentestsystem.exam</groupId>
+        <artifactId>tds-exam</artifactId>
+        <version>0.0.1-SNAPSHOT</version>
     </parent>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-        <unit-tests.skip>false</unit-tests.skip>
-        <integration-tests.skip>true</integration-tests.skip>
-        <assertj.version>3.4.1</assertj.version>
-        <mockito.version>1.10.19</mockito.version>
-        <rest-assured.version>2.9.0</rest-assured.version>
-        <tds-common.version>0.0.1-SNAPSHOT</tds-common.version>
-        <tds-exam-client.version>0.0.1-SNAPSHOT</tds-exam-client.version>
-        <tds-session.version>0.0.1-SNAPSHOT</tds-session.version>
-        <tds-student-service-client.version>0.0.1-SNAPSHOT</tds-student-service-client.version>
-        <h2-database.version>1.4.191</h2-database.version>
-        <mysql.version>5.1.39</mysql.version>
-    </properties>
 
     <dependencies>
         <!-- TDS -->
