--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,8 @@
         <tds-common.version>0.0.1-SNAPSHOT</tds-common.version>
         <tds-exam-client.version>0.0.1-SNAPSHOT</tds-exam-client.version>
         <tds-session.version>0.0.1-SNAPSHOT</tds-session.version>
-        <tds-student-service-client.version>0.0.1-SNAPSHOT</tds-student-service-client.version>
+        <tds-assessment-client.version>0.0.1-SNAPSHOT</tds-assessment-client.version>
+        <tds-student-client.version>0.0.1-SNAPSHOT</tds-student-client.version>
         <h2-database.version>1.4.191</h2-database.version>
         <mysql.version>5.1.39</mysql.version>
         <hibernate.version>5.2.4.Final</hibernate.version>
