--- a/service/src/test/resources/application.properties
+++ b/service/src/test/resources/application.properties
@@ -1,16 +1,16 @@
 #flyway.enabled=
-flyway.url=jdbc:mysql://localhost:3306/exam
-flyway.user=root
-flyway.password=M1tz3lpl1x
+flyway.url=
+flyway.user=
+flyway.password=
 
-spring.ds_queries.jdbcUrl=jdbc:mysql://localhost:3306/exam
-spring.ds_queries.username=root
-spring.ds_queries.password=M1tz3lpl1x
+spring.ds_queries.jdbcUrl=
+spring.ds_queries.username=
+spring.ds_queries.password=
 spring.ds_queries.driver-class-name=com.mysql.jdbc.Driver
 
-spring.ds_commands.jdbcUrl=jdbc:mysql://localhost:3306/exam
-spring.ds_commands.username=root
-spring.ds_commands.password=M1tz3lpl1x
+spring.ds_commands.jdbcUrl=
+spring.ds_commands.username=
+spring.ds_commands.password=
 spring.ds_commands.driver-class-name=com.mysql.jdbc.Driver
 
 server.undertow.buffer-size=16384
