Changed boolean multiple tool types to an int.  Also using the new checkNotNull precondition class.

--- a/client/pom.xml
+++ b/client/pom.xml
@@ -23,6 +23,13 @@
     </properties>
 
     <dependencies>
+        <!-- Common -->
+        <dependency>
+            <groupId>org.opentestsystem.common</groupId>
+            <artifactId>tds-common-legacy</artifactId>
+            <version>${tds-common.version}</version>
+        </dependency>
+
         <!-- Validation -->
         <dependency>
             <groupId>org.hibernate</groupId>
