TDS-341: removing local connection info

--- a/service/src/test/resources/application.properties
+++ b/service/src/test/resources/application.properties
@@ -1,15 +1,15 @@
 #flyway.enabled=
-flyway.url=jdbc:mysql://localhost:3306/exam
-flyway.user=root
-flyway.password=password
+flyway.url=
+flyway.user=
+flyway.password=
 
-spring.ds_queries.jdbcUrl=jdbc:mysql://localhost:3306/exam
-spring.ds_queries.username=root
-spring.ds_queries.password=password
+spring.ds_queries.jdbcUrl=
+spring.ds_queries.username=
+spring.ds_queries.password=
 
-spring.ds_commands.jdbcUrl=jdbc:mysql://localhost:3306/exam
-spring.ds_commands.username=root
-spring.ds_commands.password=password
+spring.ds_commands.jdbcUrl=
+spring.ds_commands.username=
+spring.ds_commands.password=
 
 server.undertow.buffer-size=16384
 server.undertow.buffers-per-region=20
