--- a/client/pom.xml
+++ b/client/pom.xml
@@ -55,6 +55,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
+            <version>2.8.1</version>
         </dependency>
     </dependencies>
 
