--- a/service/src/main/resources/bootstrap.yml
+++ b/service/src/main/resources/bootstrap.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: exam-service
+    name: tds-exam-service
   cloud:
     config:
       uri: ${CONFIG_SERVICE_URL:http://localhost:8888}
