Install curl on the docker image to allow for health checks

--- a/service/src/main/docker/Dockerfile
+++ b/service/src/main/docker/Dockerfile
@@ -4,4 +4,5 @@ VOLUME /tmp
 ADD docker-startup.sh /
 ADD tds-exam-service-0.0.1-SNAPSHOT.jar tds-exam-service.jar
 RUN sh -c 'touch /docker-startup.sh && touch /tds-exam-service.jar'
+RUN apk --no-cache add curl
 ENTRYPOINT ["/docker-startup.sh"]
