--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,8 @@
         <unit-tests.skip>false</unit-tests.skip>
         <integration-tests.skip>true</integration-tests.skip>
 
-        <tds-common.version>0.0.1-SNAPSHOT</tds-common.version>
-        <tds-common-legacy.version>0.0.1-SNAPSHOT</tds-common-legacy.version>
+        <tds-common.version>0.0.1</tds-common.version>
+        <tds-common-legacy.version>0.0.1</tds-common-legacy.version>
         <tds-exam-client.version>0.0.1-SNAPSHOT</tds-exam-client.version>
         <tds-session.version>0.0.1-SNAPSHOT</tds-session.version>
         <tds-assessment-client.version>0.0.1-SNAPSHOT</tds-assessment-client.version>
