--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <tds-session.version>0.0.1-SNAPSHOT</tds-session.version>
         <tds-assessment-client.version>0.0.1-SNAPSHOT</tds-assessment-client.version>
         <tds-student-client.version>0.0.1-SNAPSHOT</tds-student-client.version>
-        <tds-config-client.version>0.0.1-SNAPSHOT</tds-config-client.version>
+        <tds-config-client.version>0.0.1</tds-config-client.version>
 
         <mockito.version>1.10.19</mockito.version>
         <docker.image.prefix>fwsbac</docker.image.prefix>
