--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
         <unit-tests.skip>false</unit-tests.skip>
         <integration-tests.skip>true</integration-tests.skip>
 
-        <tds-common.version>0.0.1</tds-common.version>
+        <tds-common.version>0.0.2-SNAPSHOT</tds-common.version>
         <tds-common-legacy.version>0.0.1</tds-common-legacy.version>
         <tds-exam-client.version>0.0.1-SNAPSHOT</tds-exam-client.version>
         <tds-session.version>0.0.1-SNAPSHOT</tds-session.version>
