Tag docker image with built version. Update Dockerfile to copy any version of the service jar.

--- a/service/src/main/docker/Dockerfile
+++ b/service/src/main/docker/Dockerfile
@@ -2,7 +2,7 @@ FROM frolvlad/alpine-oraclejdk8:slim
 
 VOLUME /tmp
 ADD docker-startup.sh /
-ADD tds-exam-service-0.0.1-SNAPSHOT.jar tds-exam-service.jar
+ADD tds-exam-service-*.jar tds-exam-service.jar
 RUN sh -c 'touch /docker-startup.sh && touch /tds-exam-service.jar'
 RUN apk --no-cache add curl
 ENTRYPOINT ["/docker-startup.sh"]
