Setting default log level for local-development profile to “DEBUG” for rest template logging

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -17,6 +17,11 @@ spring:
     password: ${sbac.jdbc.password}
     driver-class-name: 'com.mysql.jdbc.Driver'
 
+#Logging
+logging:
+  level:
+    tds.common.web: DEBUG
+
 #Configure the default Spring Security user with the MANAGEMENT role
 security:
   user:
