--- a/scoring/pom.xml
+++ b/scoring/pom.xml
@@ -20,7 +20,7 @@
         <java.version>1.8</java.version>
         <assertj.version>3.4.1</assertj.version>
         <item-scoring.version>1.1.0-SNAPSHOT</item-scoring.version>
-        <item-renderer.version>0.0.1-SNAPSHOT</item-renderer.version>
+        <item-renderer.version>3.0.0-SNAPSHOT</item-renderer.version>
     </properties>
 
     <dependencies>
@@ -52,9 +52,19 @@
             </exclusions>
         </dependency>
         <dependency>
+            <groupId>com.amazonaws</groupId>
+            <artifactId>aws-java-sdk-s3</artifactId>
+            <version>1.11.103</version>
+        </dependency>
+        <dependency>
             <groupId>org.opentestsystem.delivery</groupId>
             <artifactId>item-scoring-api</artifactId>
             <version>${item-scoring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.auto.value</groupId>
+            <artifactId>auto-value</artifactId>
+            <version>1.3</version>
         </dependency>
 
         <!-- TODO - Need to exclude unneeded dependencies for anything included in this block -->
@@ -75,6 +85,12 @@
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>${mockito.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
 
