Feature/add scoring service (#131)
* Created initial pom for scoring dependency

* Added in the ability to fetch the item file from different places

* Add configuration class for the item scoring service

* Add an implementation to get scoring configs from the config microservice

* Add a method to fetch an item and optional response

* Add a check to make sure the item position is greater than 0

* Ensure all the fields are populuted by ExamItemFind

* Add clientName to the interface methods

* Add client name to method endpoints

* Added the implementation for the item service

* Added the necessary code to update responses

* Point at the latest version of parent

* Finished the necessary code to save responses

* Added the missing score columns to the response tables

* Added page duration field to exam page

--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 
     <modules>
         <module>client</module>
+        <module>scoring</module>
         <module>service</module>
     </modules>
 
