--- a/service/src/test/resources/application.yml
+++ b/service/src/test/resources/application.yml
@@ -23,3 +23,18 @@ flyway:
   url: ${sbac.jdbc.host}/exam
   user: ${sbac.jdbc.user}
   password: ${sbac.jdbc.password}
+
+exam:
+  scoring:
+    engine:
+      queueThreadCount: 20
+      queueHiWaterMark: 500
+      queueLowWaterMark: 400
+      pythonScoringUrl: http://localhost:32845
+      maxAttempts: 3
+      sympyTimeoutMillis: 1000
+    s3:
+      bucketName: tds-resources
+      prefix: item-content/local/
+      accessKey: ${s3.key}
+      secretKey: ${s3.secret}
