Resolved the wrong issue.  Removed a bunch of dependencies from the scoring engine.

--- a/scoring/pom.xml
+++ b/scoring/pom.xml
@@ -93,6 +93,18 @@
                     <groupId>org.springframework</groupId>
                     <artifactId>spring-context</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>org.apache.activemq</groupId>
+                    <artifactId>activemq-client</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.antlr</groupId>
+                    <artifactId>antlr</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.cassandra</groupId>
+                    <artifactId>cassandra-all</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <!-- END of the block for dependency check -->
