Start integrating item selection components into exam

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>tds-config-client</artifactId>
             <version>${tds-config-client.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.opentestsystem.delivery</groupId>
+            <artifactId>tds-item-selection-components</artifactId>
+            <version>${tds-item-selection.version}</version>
+        </dependency>
 
         <!-- Spring -->
         <dependency>
