--- a/pom.xml
+++ b/pom.xml
@@ -32,9 +32,10 @@
         <tds-common.version>0.0.8</tds-common.version>
         <tds-common-legacy.version>0.0.5</tds-common-legacy.version>
         <tds-session.version>0.0.2</tds-session.version>
-        <tds-assessment-client.version>0.0.8</tds-assessment-client.version>
+        <tds-assessment-client.version>0.0.9-SNAPSHOT</tds-assessment-client.version>
         <tds-student-client.version>0.0.1</tds-student-client.version>
         <tds-config-client.version>0.0.2</tds-config-client.version>
+        <tds-item-selection.version>3.0.1-SNAPSHOT</tds-item-selection.version>
 
         <maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
