Cleaned up the settings for item scoring

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -75,6 +75,7 @@ exam:
       pythonScoringUrl: http://localhost:32845
       maxAttempts: 3
       sympyTimeoutMillis: 1000
+      encryptionEnabled: false
     s3:
       bucketName: tds-resources
       prefix: item-content/local/
