Expose an item scoring endpoint.

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -80,6 +80,6 @@ exam:
       encryptionEnabled: false
     s3:
       bucketName: tds-resources
-      prefix: item-content/local/
       accessKey: ${s3.key}
       secretKey: ${s3.secret}
+      itemPrefix: item-content/local/
