Disable cloud bus for local development spring profile
Spring cloud bus requires a running rabbitmq.
Prevents warning log messages when rabbitmq is not running.

--- a/service/src/test/resources/application.yml
+++ b/service/src/test/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     username: ${sbac.jdbc.user}
     password: ${sbac.jdbc.password}
     driver-class-name: 'com.mysql.jdbc.Driver'
+  cloud.bus.enabled: false
 
 server:
   undertow:
