Feature/item selection (#159)
* Added item selection logic supporting fixed form assessments

* Bumped to use the latest item-selection-shell components dependency

* Bumped to use the latest student-library dependency

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -56,6 +56,16 @@
             <artifactId>tds-config-client</artifactId>
             <version>${tds-config-client.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.opentestsystem.delivery</groupId>
+            <artifactId>tds-item-selection-components</artifactId>
+            <version>${tds-item-selection.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.opentestsystem.delivery</groupId>
+            <artifactId>student-library</artifactId>
+            <version>${tds-student-library.version}</version>
+        </dependency>
 
         <!-- Spring -->
         <dependency>
