--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
         <tds-assessment-client.version>0.0.10</tds-assessment-client.version>
         <tds-session.version>0.0.5</tds-session.version>
         <tds-config-client.version>0.0.2</tds-config-client.version>
+        <tds-student-library.version>3.0.5</tds-student-library.version>
+        <tds-item-selection.version>3.0.1</tds-item-selection.version>
 
         <maven.compiler.plugin.version>3.5.1</maven.compiler.plugin.version>
         <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
