For now point the s3 location for dev items

--- a/service/src/main/resources/application.yml
+++ b/service/src/main/resources/application.yml
@@ -89,4 +89,4 @@ exam:
       bucketName: tds-resources
       accessKey: ${s3.key}
       secretKey: ${s3.secret}
-      itemPrefix: item-content/local/
+      itemPrefix: item-content/dev/
